# learn-graphics

./: .gitignore  .gitmodules
draw_triangle_in_framebuffer/: CMakeLists.txt  main.cpp
draw_triangle_in_framebuffer_threads/: main.cpp
draw_triangle_in_framebuffer_threads/geometry/: CMakeLists.txt
draw_triangle_in_framebuffer_threads2/: main.cpp
draw_triangle_in_framebuffer_threads2/fps_digits/: CMakeLists.txt
draw_triangle_in_framebuffer_threads2/line_drawer/: CMakeLists.txt  line_drawer.cpp  line_drawer.h
draw_triangle_with_drm/: CMakeLists.txt  main.cpp
draw_triangle_with_drm/.cache/clangd/index/: base_geometry.cpp.D7192D8D0A403B22.idx  base_geometry.h.BDE0464A0D0EFB96.idx  drm_util.cpp.1DD2D810D7BDB0B2.idx  drm_util.h.93CE70A2282279CF.idx  fps_digits.cpp.D15CC89B65794CD2.idx  fps_digits.h.D5CE72CEDE60D97F.idx  line_drawer.cpp.38775035A135F65B.idx  line_drawer.h.8789D119C2100F02.idx  main.cpp.8325895D07FF26D1.idx  triangle.cpp.A4BE943E9A60353E.idx  triangle.h.31B5F842DD3BC8F9.idx
draw_triangle_with_drm/drm_util/: CMakeLists.txt  drm_util.cpp  drm_util.h
draw_triangle_with_drm/fps_digits/: CMakeLists.txt
draw_triangle_with_drm/geometry/triangle/: CMakeLists.txt
draw_triangle_with_drm/line_drawer/: CMakeLists.txt  line_drawer.h
draw_triangle_with_drm_double_buffer/: CMakeLists.txt  main.cpp
draw_triangle_with_drm_double_buffer/.cache/clangd/index/: base_geometry.cpp.B436E6DDA825B462.idx  base_geometry.h.A8ACCA4DBDBC0738.idx  drm_util.cpp.BC5C5829EEDDF03C.idx  drm_util.h.CC9F8B4E3A985931.idx  fps_digits.cpp.5C74201A425B6173.idx  fps_digits.h.9AAA3FAF9EC554BF.idx  line_drawer.cpp.9A46EAEBFD1A41B2.idx  line_drawer.h.B9BB49766106D6B1.idx  main.cpp.F5095BAB01D4D633.idx  triangle.cpp.2A49C5DFF6066115.idx  triangle.h.85BCEB9E9B0F894B.idx
draw_triangle_with_drm_double_buffer/drm_util/: drm_util.cpp
draw_triangle_with_drm_double_buffer/fps_digits/: CMakeLists.txt  fps_digits.cpp  fps_digits.h
draw_triangle_with_drm_double_buffer/geometry/triangle/: CMakeLists.txt  triangle.h
draw_triangle_with_drm_double_buffer/line_drawer/: CMakeLists.txt  line_drawer.cpp  line_drawer.h
draw_triangle_with_drm_double_buffer_vsync/: CMakeLists.txt  main.cpp
draw_triangle_with_drm_double_buffer_vsync/.cache/clangd/index/: base_geometry.cpp.C179B5EB53310FC2.idx  base_geometry.h.F496388981CDBAC4.idx  drm_util.cpp.C82D9F54E871D3C9.idx  drm_util.h.B29D0EF7467E184A.idx  fps_digits.cpp.923757358A65CAB8.idx  fps_digits.h.48B1001F86F06231.idx  line_drawer.cpp.12E1C2DB81C751D7.idx  line_drawer.h.04824275DE9E7C82.idx  main.cpp.B058400D90734934.idx  triangle.cpp.2BAB8B88E2F458F9.idx  triangle.h.26727B52486E0AA7.idx
draw_triangle_with_drm_double_buffer_vsync/drm_util/: CMakeLists.txt  drm_util.cpp  drm_util.h
draw_triangle_with_drm_double_buffer_vsync/fps_digits/: CMakeLists.txt  fps_digits.cpp
draw_triangle_with_drm_double_buffer_vsync/geometry/base_geometry/: CMakeLists.txt
draw_triangle_with_drm_double_buffer_vsync/geometry/triangle/: CMakeLists.txt
draw_triangle_with_drm_double_buffer_vsync/line_drawer/: CMakeLists.txt
draw_triangle_with_drm_mouse_input/: CMakeLists.txt  main.cpp
draw_with_drm/: main.cpp
drm/draw_triangle_with_drm/: CMakeLists.txt  main.cpp
drm/draw_triangle_with_drm_double_buffer/: main.cpp
drm/draw_triangle_with_drm_mouse_input/: CMakeLists.txt  main.cpp
drm/draw_with_drm/: CMakeLists.txt
drm/draw_with_drm2/: CMakeLists.txt  main.cpp
drm/draw_with_drm2/drm_util/: CMakeLists.txt
framebuffer/draw_triangle_in_framebuffer/: main.cpp
framebuffer/draw_triangle_in_framebuffer_threads/: CMakeLists.txt
framebuffer/draw_triangle_in_framebuffer_threads/line_drawer/: CMakeLists.txt  line_drawer.cpp
framebuffer/draw_triangle_in_framebuffer_threads2/: CMakeLists.txt
framebuffer/draw_triangle_in_framebuffer_threads2/fps_digits/: fps_digits.h
framebuffer/draw_triangle_in_framebuffer_threads2/geometry/triangle/: CMakeLists.txt
framebuffer/learn_linux_framebuffer/: CMakeLists.txt
learn_glfw_1/: .gitignore  CMakeLists.txt
learn_glfw_1/.cache/clangd/index/: context.c.6221F8719802E8CB.idx  egl_context.c.D64115E93C2EF3C9.idx  egl_context.h.6169A233DDE21924.idx  glfw3.h.BC1B79FEF2D551C1.idx  glx_context.c.61109490E9826981.idx  glx_context.h.C94FAE309EEA2EC5.idx  init.c.FA8BDE127DDF95A4.idx  input.c.B627CACD27F301D9.idx  internal.h.5ADE9F111EA7B139.idx  linux_joystick.c.06F29E9D305544E5.idx  linux_joystick.h.92AB371A10572BAA.idx  mappings.h.325E99BB349BCC2B.idx  monitor.c.5C49C2116B04D9D0.idx  osmesa_context.c.85D61671EDE8411D.idx  osmesa_context.h.1F2969B470AEDE54.idx  posix_thread.c.BE9913D4D6A51C76.idx  posix_thread.h.6EDC785DEC815E78.idx  posix_time.c.9A4456A3D1D0ECAB.idx  posix_time.h.46B9FEE1331B548E.idx  vulkan.c.C392367A15CD69E7.idx  window.c.485F951AC7E1CA67.idx  x11_init.c.5C320E9CC402A48E.idx  x11_monitor.c.3304A4225D3B5135.idx  x11_platform.h.8AFCF5BE1F9D5B38.idx  x11_window.c.34B70998B21D6561.idx  xkb_unicode.c.59755E571A1018D1.idx  xkb_unicode.h.ACB2250E5F53497E.idx
learn_linux_framebuffer/: main.cpp
lib/2D_line_drawer/: 2D_line_drawer.cpp  2D_line_drawer.hpp  CMakeLists.txt  compile_commands.json
lib/2D_line_drawer_cross/: 2D_line_drawer.hpp
lib/2D_triangle/: 2D_triangle.cpp  2D_triangle.hpp  CMakeLists.txt  compile_commands.json
lib/base_geometry/: CMakeLists.txt  base_geometry.cpp  base_geometry.h  base_geometry.hpp
lib/cxxopts_wrapper/: CMakeLists.txt  compile_commands.json  cxxopts_wrapper.cpp  cxxopts_wrapper.hpp
lib/drm_util/: CMakeLists.txt  compile_commands.json  drm_util.cpp  drm_util.h  drm_util.hpp
lib/fps_digits/: CMakeLists.txt  fps_digits.cpp  fps_digits.hpp
lib/line_drawer/: CMakeLists.txt  compile_commands.json  line_drawer.cpp  line_drawer.h
lib/mouse_event_reader/: CMakeLists.txt  (+2 more)
linux_mouse_event/: CMakeLists.txt  main.cpp
sdl_window/sdl_framebuffer_1/: CMakeLists.txt  SDL  main.cpp
sdl_window/sdl_framebuffer_2/: CMakeLists.txt  main.cpp
sdl_window/sdl_framebuffer_threadpool_triangle/: CMakeLists.txt  main.cpp
sdl_window/sdl_framebuffer_triangle/: CMakeLists.txt  main.cpp
(+28 files in other folders)
